--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,9 +12,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
-    "@angular/common": "^18.1.0",
+    "@angular/common": "^18.1.4",
     "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.0",
+    "@angular/core": "^18.1.4",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
@@ -23,16 +23,18 @@
     "@angular/ssr": "^18.1.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "three": "^0.167.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.0",
-    "@angular/cli": "^18.1.0",
+    "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/three": "^0.167.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
