--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,22 +6,21 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:portfolio": "node dist/portfolio/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
-    "@angular/common": "^18.1.4",
+    "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.4",
+    "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
-    "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "@angular/ssr": "^18.1.0",
-    "express": "^4.18.2",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "three": "^0.167.1",
     "tslib": "^2.3.0",
@@ -29,11 +28,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.0",
-    "@angular/cli": "^18.1.4",
+    "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "@types/three": "^0.167.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
